8287432: C2: assert(tn->in(0) != __null) failed: must have live top node

Backport-of: 78d371266ae8a629db8176ced4d48e9521702cce